resource/external-dns/external-dns-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
      # If you're using kiam or kube2iam, specify the following annotation.
      # Otherwise, you may safely omit it.
      annotations:
        #iam.amazonaws.com/role: arn:aws:iam::ACCOUNT-ID:role/IAM-SERVICE-ROLE-NAME
        eks.amazonaws.com/role-arn: arn:aws-cn:iam::876820548815:role/eksctl-gcr-zhy-eksworkshop-addon-iamservicea-Role1-1AXH6XQ76QEL2
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: gcr.io/k8s-artifacts-prod/external-dns/external-dns:v0.7.1
          args:
            - --source=service
            - --source=ingress
            - --domain-filter=external-dns-test.ruiliang-zhy.com # will make ExternalDNS see only the hosted zones matching provided domain, omit to process all available hosted zones
            - --provider=aws
            - --policy=upsert-only # would prevent ExternalDNS from deleting any records, omit to enable full synchronization
            - --aws-zone-type=public # only look at public hosted zones (valid values are public, private or no value for both)
            - --registry=txt
            - --txt-owner-id=/hostedzone/Z08580531MSSNAPKT4258
            - --zone-id-filter=/hostedzone/Z08580531MSSNAPKT4258
            https://route53.amazonaws.com.cn
      securityContext:
        fsGroup: 65534 # For ExternalDNS to be able to read Kubernetes and AWS token files
