resource/external-dns/external-dns-service-demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-dns-nginx-demo
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nginx.external-dns-test.ruiliang-zhy.com
spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: http
      targetPort: 80
  selector:
    app: external-dns-nginx-demo

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns-nginx-demo
spec:
  selector:
    matchLabels:
      app: external-dns-nginx-demo
  template:
    metadata:
      labels:
        app: external-dns-nginx-demo
    spec:
      containers:
        - image: nginx
          name: nginx
          ports:
            - containerPort: 80
              name: http
